--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,53 @@
+*{
+    margin: 0;
+    padding: 0;
+
+}
+body {
+    font-family:"Roboto";
+
+
+}
 h1{
+    font-style: italic;
     font-family: Arial, Helvetica, sans-serif*;
     color: brown;
     text-align: center;
+    margin: 3vh;
 }
-p:hover{visibility: hidden;}
+h2 { 
+    font-style: italic;
+    color: tomato;
+}
+p {
+    margin-top: 10px;
+    margin-bottom: 100px;
+    margin-right: 200px;
+    margin-left: 100px;
+}
+ul{
+    background-color: black;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+li { display: inline;
+    top: 0;
+    width: 200%;
+    background-color:gray;
+}
+img {
+    di
+    margin-top: 100px;
+    margin-bottom: 100px;
+    margin-right: 200px;
+    margin-left: 350px;
+  }
+  .video {
+    margin-top: 100px;
+    margin-bottom: 100px;
+    margin-right: 200px;
+    margin-left: 350px;
+
+  }
